apps/k3s-prod-0/blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: apps
spec:
  selector:
    zty89.com/app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
